--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -18,6 +18,8 @@
     "hardhat": "^2.10.1"
   },
   "dependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^1.0.2",
+    "@openzeppelin/contracts": "^4.7.2",
     "dotenv": "^16.0.1"
   }
 }
